cmake_minimum_required(VERSION 3.21)
project(alpine_kernel C)

set(CMAKE_C_STANDARD 17)

include_directories(kernel/include)
include_directories(libc/include)
include_directories(libc/include/sys)

add_executable(alpine_kernel
        kernel/arch/x86_64/boot.asm
        kernel/arch/x86_64/sh.c
        kernel/arch/x86_64/tty.c
        kernel/arch/x86_64/msr.c
        kernel/arch/x86_64/cpu.c
        kernel/arch/x86_64/acpi.c
        kernel/arch/x86_64/apic.c
        kernel/arch/x86_64/pci.c
        kernel/include/kernel/kb.h
        kernel/include/kernel/sh.h
        kernel/include/kernel/tty.h
        kernel/include/kernel/vga_ttyd.h
        kernel/include/kernel/vbe_ttyd.h
        kernel/arch/x86_64/vga_ttyd.c
        kernel/arch/x86_64/vbe_ttyd.c
        kernel/include/kernel/msr.h
        kernel/include/kernel/cpu.h
        kernel/include/kernel/acpi.h
        kernel/include/kernel/apic.h
        kernel/include/kernel/pci.h
        kernel/kernel/kernel.c
        libc/include/sys/cdefs.h
        libc/include/sys/circ_buf.h
        libc/include/sys/io.h
        libc/include/ctype.h
        libc/include/errno.h
        libc/include/stdio.h
        libc/include/stdlib.h
        libc/include/string.h
        libc/stdio/printf.c
        libc/stdio/putchar.c
        libc/stdio/puts.c
        libc/stdlib/abort.c
        libc/stdlib/itoa.c
        libc/stdlib/malloc.c
        libc/string/memchr.c
        libc/string/memcmp.c
        libc/string/memcpy.c
        libc/string/memmove.c
        libc/string/memset.c
        libc/string/strcat.c
        libc/string/strchr.c
        libc/string/strcmp.c
        libc/string/strcpy.c
        libc/string/strequ.c
        libc/string/strlen.c
        libc/string/strrev.c
        libc/string/strspn.c
        libc/string/strstr.c
        libc/string/strtok.c
        libc/sys/circ_buf.c
        kernel/kernel/test.c
        kernel/include/test.h
        libc/stdio/printf_test.c
        libc/include/stdio_tests.h
        kernel/arch/x86_64/mem.c
        kernel/include/kernel/mb2_info.h
        kernel/include/kernel/mb2_type.h
        kernel/include/kernel/mem.h
        kernel/include/kernel/psf_font.h
        kernel/include/kernel/heap.h
        kernel/arch/x86_64/heap.c
        kernel/arch/x86_64/mb2_info.c
        kernel/arch/x86_64/error.c
        kernel/include/kernel/error.h
        kernel/arch/x86_64/usb.c
        kernel/include/kernel/usb.h
        kernel/arch/x86_64/psf_font.c
        kernel/arch/x86_64/queue.c
        kernel/include/kernel/queue.h
        kernel/arch/x86_64/tests.c
        kernel/include/kernel/tests.h
        )
