cmake_minimum_required(VERSION 3.21)
project(alpine_kernel C)

set(CMAKE_C_STANDARD 17)

include_directories(kernel/include)
include_directories(libc/include)
include_directories(libc/include/sys)

add_executable(alpine_kernel
        kernel/boot/boot.asm
        kernel/shell/sh.c
        kernel/tty/tty.c
        kernel/cpu/msr.c
        kernel/cpu/cpu.c
        kernel/device/acpi.c
        kernel/device/apic.c
        kernel/device/pci.c
        kernel/include/kernel/device/kb.h
        kernel/include/kernel/shell/sh.h
        kernel/include/kernel/tty/tty.h
        kernel/include/kernel/tty/vga_ttyd.h
        kernel/include/kernel/tty/vbe_ttyd.h
        kernel/tty/vga_ttyd.c
        kernel/tty/vbe_ttyd.c
        kernel/include/kernel/cpu/msr.h
        kernel/include/kernel/cpu/cpu.h
        kernel/include/kernel/device/acpi.h
        kernel/include/kernel/device/apic.h
        kernel/include/kernel/device/pci.h
        kernel/boot/kernel.c
        libc/include/sys/cdefs.h
        libc/include/sys/circ_buf.h
        libc/include/sys/io.h
        libc/include/ctype.h
        libc/include/errno.h
        libc/include/stdio.h
        libc/include/stdlib.h
        libc/include/string.h
        libc/stdio/printf.c
        libc/stdio/putchar.c
        libc/stdio/puts.c
        libc/stdlib/abort.c
        libc/stdlib/itoa.c
        libc/stdlib/malloc.c
        libc/string/memchr.c
        libc/string/memcmp.c
        libc/string/memcpy.c
        libc/string/memmove.c
        libc/string/memset.c
        libc/string/strcat.c
        libc/string/strchr.c
        libc/string/strcmp.c
        libc/string/strcpy.c
        libc/string/strequ.c
        libc/string/strlen.c
        libc/string/strrev.c
        libc/string/strspn.c
        libc/string/strstr.c
        libc/string/strtok.c
        libc/sys/circ_buf.c
        kernel/test/test.c
        kernel/include/kernel/test/test.h
        libc/stdio/printf_test.c
        libc/include/stdio_tests.h
        kernel/mem/mem.c
        kernel/include/kernel/boot/mb2_info.h
        kernel/include/kernel/boot/mb2_type.h
        kernel/include/kernel/mem/mem.h
        kernel/include/kernel/font/psf_font.h
        kernel/include/kernel/mem/heap.h
        kernel/mem/heap.c
        kernel/boot/mb2_info.c
        kernel/include/kernel/error/error.h
        kernel/include/kernel/device/usb.h
        kernel/device/usb.c
        kernel/font/psf_font.c
        kernel/font/psf_font.c
        libc/sys/dll.c
        libc/include/sys/dll.h
        kernel/test/tests.c
        kernel/include/kernel/test/tests.h
        libc/include/sys/vector.h
        libc/sys/vector.c
        libc/sys/circ_buf_ptr.c)
